# kaggle-google-research-identify-contrails-reduce-global-warming

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
exp_config/: 053_16.yml  053_17.yml  053_18.yml  053_2.yml  056_5.yml  056_7.yml  056_8.yml  056_9.yml  057_5.yml  057_7.yml  057_8.yml  057_9.yml
input/: .gitignore
src/: data.py  data_download.sh  data_preprocess.sh  data_preprocess_input_data.py  data_preprocess_meta_data.py  global_config.py  infer_seg_validation.py  model.py  train.sh  train_and_infer.sh  train_seg_by_all_train_data.py
src/base_torch/: __init__.py
src/base_torch/data/: __init__.py  dataset.py  transform.py
src/base_torch/model/: __init__.py  loss.py  model_basic.py  model_image.py
src/base_torch/optimizer/: __init__.py  lr_scheduler.py  optimizer.py
src/base_torch/pfn_extras/: __init__.py
src/utils/: __init__.py  utils.py
