[tool.poetry]
name = "tawara_gricrgw"
version = "0.1.0"
description = ""
authors = ["Tawara"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.5.3"
numpy = "1.23.4"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
opencv-python = "^4.7.0.72"
Pillow = "^9.5.0"
albumentations = "^1.3.0"
torch = { path = "torch-2.0.1+cu117-cp39-cp39-linux_x86_64.whl"}
torchaudio = { path = "torchaudio-2.0.2+cu117-cp39-cp39-linux_x86_64.whl"}
torchvision = { path = "torchvision-0.15.2+cu117-cp39-cp39-linux_x86_64.whl"}
timm = "^0.9.2"
segmentation-models-pytorch = "^0.3.3"
transformers = "^4.29.2"
pytorch-pfn-extras = "^0.6.7"

[tool.poetry.dev-dependencies]
pip = ">=22.0.4"
isort = ">=5.10.1"
mypy = ">=0.950"
flake8 = ">=4.0.1"
black = ">=22.3.0"
pytest = ">=7.1.2"
ipython = ">=8.3.0"
ipywidgets = "^7.7.0"
jupyterlab = ">=3.4.0"
sweetviz = ">=2.1.3"
yapf = ">=0.32.0"
kaggle = "^1.5.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
